--- a/manual.1
+++ b/manual.1
@@ -49,7 +49,7 @@ to cytaty zawodnikow z wybranych klubow.
 .SH BUGS
 .B Portal bez wad!
 .SH AUTHOR
-Autor: Michal Cwynar (175132)
+Autor: Michal Cwynar
 .SH SEE ALSO
 .PP
 .UR https://www.onet.pl/ 
